# smart5six_description

./: CMakeLists.txt  README.md  README.txt  model.config  package.xml
launch/: comau_moveit_upload.launch  comau_moveit_upload.launch~  comau_upload.launch~
meshes/: offsets_axes.txt
meshes/dae/: axes_1.dae  axes_2.dae  axes_3.dae  axes_4.dae  axes_5.dae  axes_6.dae  base.dae
meshes/stl/: axes_1.stl  axes_2.stl  axes_3.stl  axes_4.stl  axes_5.stl  axes_6.stl  base.stl
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml
robot/: comau.urdf  comau.urdf~  comau_moveit.urdf  comau_moveit.urdf~
