<?xml version="1.0"?>
<package>
    <name>smart5six_description</name>
    <version>1.0.0</version>
    <description>Comau Smart5Six description</description>

    <maintainer email="iaslab@dei.unipd.it">IAS-Lab</maintainer>

    <license>BSD</license>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>urdf</build_depend>
    <build_depend>gazebo_ros_plugins</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>gazebo_ros</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>urdf</run_depend>
    <run_depend>gazebo_ros_plugins</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>gazebo_ros</run_depend>
    <run_depend>message_runtime</run_depend>


</package>
